# click-default-group-colors

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
click_default_group_colors/: __init__.py  core.py
tests/: __init__.py  test_click_default_group_colors.py
