[tool.poetry]
name = "click-default-group-colors"
version = "1.0.0"
description = ""
authors = ["Yukihiro <12211343+y-marui@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click-default-group = "^1.2.2"
click-help-colors = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
